# calculations

./: .env.example  DIMENSIONAL_CONCEPTS_ANALYSIS.md  ENHANCEMENT_SUMMARY.md  PARENT_CONCEPT_MATCHING.md  POINT_IN_TIME_FIX_SUMMARY.md  QUICK_REFERENCE.md  README.md  ROOT_CAUSE_ANALYSIS_0001065280.md  ROOT_CAUSE_NETFLIX_WRONG_Q4.md  TARGET_DATABASE_SCHEMA.md  analyze_all_netflix_q4.py  analyze_complete_db.py  analyze_current_database.py  analyze_domestic_years.py  analyze_negative_q4.py  analyze_netflix_errors.py  app.py  check_all_companies.py  check_all_q4.py  check_calculation_status.py  check_collections.py  check_concept_names.py  check_domestic_streaming.py  check_domestic_streaming_q4.py  check_fy2019_q4.py  check_netflix_concepts.py  check_point_in_time.py  check_point_in_time_correctness.py  check_regional_data.py  check_regional_q4.py  check_streaming_members_q4.py  cleanup_summary.py  debug_concept_structure.py  debug_emea_q4.py  debug_parents.py  debug_point_in_time.py  debug_quarterly_matching.py  delete_dimensional_q4_improved.py  delete_netflix_dimensional_q4.py  delete_point_in_time_q4.py  (+44 more)
calculations/: __init__.py
config/: database.py
doc/: README.md  cashflow-fix-flow.md  gross-profit-cal-flow.md  q4-calculation-flow.md
models/: financial_data.py
repositories/: financial_repository.py
scripts/: migrate_cashflow_fixed.py
scripts/debug/: 02_debug_filing_id.py  03_debug_annual_metadata.py  CASHFLOW_FIX_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  (+11 more)
services/: cashflow_fix_service.py  gross_profit_service.py  q4_calculation_service.py
