[project]
name = "calculations"
version = "0.1.0"
description = "Q4 Financial Calculations for Income Statement Data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "pymongo>=4.5.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".", "config", "models", "repositories", "services", "scripts"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "black",
    "flake8"
]
